# cat-facts

./: README.md  facts.py  pyproject.toml
cat_facts/: __init__.py  fact.py  facts.py
