[tool.poetry]
name = "cat-facts"
version = "0.3.0"
description = ""
authors = ["Byron Collier <collieb@confused.com>"]
readme = "README.md"
packages = [{include = "cat_facts"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
